# proto-fleet

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Procfile  README.md  SECURITY.md  buf.gen.yaml  buf.yaml  dev.sh  docker-compose.protofleet-real-miners-runner.yaml  docker-compose.yaml  go.work  go.work.sum  justfile  latest.json  latest.txt  lefthook.yml  proto-fleet-iac.code-workspace  proto-fleet-server.code-workspace  run-fleet.sh
.claude/: launch.json  settings.json
.claude/agents/: architecture-validator.md  dead-code-remover.md  go-test-fixer.md  go-test-reviewer.md  linter-fixer.md  magic-values-fixer.md  remove-obvious-comments.md  review-magic-values.md  rule-of-three-enforcer.md
.claude/commands/: clean.md  plan.md  pr-describe.md  pr-ready.md  regen.md  release-notes.md  triage-pr.md
.claude/hooks/: git-commit-guard.sh
.github/: CODEOWNERS  client-e2e-tests.yml  copilot-instructions.md  dependabot.yml  labeler.yml  path-filters.yml  review-policy.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  miner-compatibility.yml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/release-configs/: web.json
.github/scripts/: evaluate_review_policy.py  evaluate_review_policy_test.py
.github/workflows/: RASPBERRY_PI_DEPLOYMENT.md  asicrs-plugin-checks.yml  codex-security-review.yml  dependency-review.yml  deployment-config-checks.yml  generated-code-check.yml  gh-pages-cleanup.yml  mdk-api-docs.yml  migration-hygiene.yml  nightly-builds.yml  powershell-lint.yml  pr-gate.yml  proto-fleet-artifact-build.yml  protofleet-antminer-plugin-checks.yml  protofleet-antminer-plugin-tests.yml  protofleet-backend-tests.yml  protofleet-client-checks.yml  protofleet-contract-checks.yml  protofleet-contract-tests.yml  protofleet-deploy-clean-up.yml  protofleet-deploy-develop-backend.yml  protofleet-deploy-develop-frontend.yml  protofleet-deploy-develop-proto-os.yml  protofleet-deploy-develop-traefik.yml  protofleet-deploy-docker-to-develop-vm.yml  protofleet-deploy-miner-simulator.yml  protofleet-deploy-pr-backend.yml  protofleet-deploy-pr-frontend.yml  protofleet-deploy-pr-proto-os.yml  protofleet-deploy-to-pi.yml  protofleet-e2e-real-miners-manual.yml  protofleet-e2e-tests.yml  protofleet-proto-checks.yml  (+20 more)
client/: .gitignore  .npmrc  .prettierignore  .prettierrc.js  CLAUDE.md  README.md  STORE_REFACTOR_TODOS.md  eslint.config.js  fleet.json  nfpm-proto-os.yaml  nginx.runner-protofleet.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
deploy/: README.md
deployment-files/: README.md  docker-compose.alerts.yaml  docker-compose.grafana.yaml  docker-compose.ha-data.yaml  docker-compose.ha-monitor.yaml  docker-compose.ha.yaml  docker-compose.notifications.yaml  docker-compose.protofleet-real-miners-runner.yaml  docker-compose.rig-telemetry.yaml  docker-compose.system-monitoring.yaml  docker-compose.tracing.yaml  docker-compose.yaml  install-sim-miners.sh  install.sh  migrate-data.sh  rollback-migration.sh  run-fleet.sh  uninstall.sh
docs/: adr-001-grafana-bundling.md  alerts-metrics.md  architecture.md  grpc-to-openapi-execution-plan.md  notifications-metrics.md  rfc-grpc-to-openapi-migration.md  stratum-v2-plan.md
fleet/: .golangci.yaml  Dockerfile  README.md  buf.gen.yaml  docker-compose.yaml  go.mod  go.sum  justfile  sqlc.yaml  testing.http
fleet-protobuf/: README.md  buf.gen.yaml  justfile
hermit-packages/: proto-python-gen.hcl
just/: go-plugin.just
minefield/: .gitignore  README.md  go.mod  go.sum  justfile  package-lock.json  package.json  tsconfig.json
miner-web/: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.js  README.md  docker-compose.yml  eslint.config.js  fleet.json  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
plugin/asicrs/: Cargo.toml  Dockerfile.build  config.yaml
plugin/asicrs/src/: capabilities.rs  config.rs  device.rs  driver.rs  main.rs
plugin/example-python/: .gitignore  Dockerfile.build  main.py  pyproject.toml
plugin/example-python/example_driver/: driver.py
plugin/example-python/tests/: test_driver.py
proto-rig-api/: README.md  VERSION.md
scripts/: lefthook-block-protected-branches.sh  lefthook-client-format.sh  lefthook-goimports.sh  lefthook-lib.sh  lefthook-proto-buf-lint.sh  lefthook-python-ruff.sh  pip-config.sh
sdk/rust/proto-fleet-plugin/: Cargo.toml  build.rs
sdk/rust/proto-fleet-plugin/src/: capabilities.rs  errors.rs  http_client.rs  lib.rs  pb.rs
server/: .env.local  .golangci.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.fleetnode.dev  README.md  buf.gen.yaml  buf.yaml  docker-compose-README.md  docker-compose.alerts.yaml  docker-compose.base.yaml  docker-compose.fleetnode-ui-test.yaml  docker-compose.grafana.yaml  docker-compose.mqtt-sim.yaml  docker-compose.notifications.yaml  docker-compose.pi.yaml  docker-compose.rig-telemetry.yaml  docker-compose.yaml  embed.go  error_seeds.example.yaml  go.mod  go.sum  http-client.env.json  justfile  miner-protos  otel-collector-config.yaml  sqlc-pg.yaml  sqlc.yaml  testing.http
server/sdk/v1/python/: .gitignore  LICENSE  README.md  justfile  pyproject.toml
server/sdk/v1/python/proto_fleet_sdk/: __init__.py  auth.py  capabilities.py  enums.py  error_codes.py  errors.py  py.typed  server.py  servicer.py  types.py
server/sdk/v1/python/proto_fleet_sdk/protocols/: __init__.py  device.py  driver.py
server/sdk/v1/python/proto_fleet_sdk/telemetry/: __init__.py  components.py  converters.py  metrics.py
server/sdk/v1/python/proto_fleet_sdk/utils/: __init__.py  capability_helpers.py  http_utils.py  port_utils.py  type_converters.py  validation.py
server/sdk/v1/python/tests/: __init__.py  conftest.py  test_enums.py  test_http_utils.py  test_types.py  test_utils.py  test_validation.py
server/sdk/v1/python/tests/integration/: __init__.py  test_grpc_servicer.py
specs/: README.md  TEMPLATE.md
(+5748 files in other folders)
